in common places.
- Test if usrsvc is holding a lock on a program before testing if it's down
and before restarting. This fixes the condition where issuing a "usrsvc
restart" while usrsvcd is running will force usrsvcd to note the program
stopped and issue a double-start. Only one instance will be started, but it's
excess work and logging.

* 1.3.3 - May 23 2016
- When useshell=True, give up to success_seconds for the subprocess of the shell to start. This covers if some pre-tasks take a few seconds to perform before the final app is started.

* 1.3.2 - May 23 2016
- Fix issue when proctitle_re is provided. 
- Better handle automatic proctitle_re when '&&' is used in a command. 
- Make useshell default to False. 
- When useshell is True, ensure we dont match the wrapping shell process but the final process itself.

* 1.3.1 - May 23 2016
- Instead of calling "usrsvc" as a subprocess from "usrsvcd", move the usrsvc client into a module and have usrsvcd fork and execute it. This allows usrsvcd to continue to manage processes after a bad configuration, by having usrsvc inherit the previous configuration as stored in usrsvcd.
- If "usrsvcd restart" was called with an absolute path to usrsvcd, use that same path (incase usrsvcd is not on PATH).

* 1.2.6 - May 23 2016
- Wait 1 second after spawning subprocess during "usrsvcd restart", or we may exit before child process is created.
- Inherit env during "usrsvcd restart" to inherit any PATH

* 1.2.5 - May 17 2016
- Fix program stop not working after refactoring

* 1.2.4 - May 16 2016
- Fix some typos found by Sergey Fukanchik. Thanks!

* 1.2.3 - May 16 2016
- Fix stupid RST MISformatting of README. Why can't it use markdown?

* 1.2.2 - May 11 2016
- Wait longer before sending kill -9 for "usrsvcd stop"
- Add "usrsvcd start" which is same as just "usrsvcd" but intuitive.
- Add a --readme  option which will print the README
- Cleanup the usage for usrsvc

* 1.2.1 - Apr 28 2016
- Fix README path